--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-scroll-to": "^3.0.0-beta.6",
+    "react-spring": "^8.0.27",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
