--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-id-swiper": "^3.0.0",
     "react-mdl": "^2.1.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-scroll-to": "^3.0.0-beta.6",
     "react-spring": "^8.0.27",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "swiper": "^5.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
