--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-scroll-to": "^3.0.0-beta.6",
-    "react-spring": "^8.0.27",
+    "react-spring": "^9.0.0-rc.3",
+    "react-use-gesture": "^7.0.15",
     "reactstrap": "^8.4.1",
     "swiper": "^5.3.8"
   },
