--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-id-swiper": "^3.0.0",
     "react-mdl": "^2.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-scroll-to": "^3.0.0-beta.6",
