--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.1.5",
+    "bootstrap": "^4.4.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-id-swiper": "^3.0.0",
+    "react-mdl": "^2.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-scroll-to": "^3.0.0-beta.6",
     "react-spring": "^9.0.0-rc.3",
     "react-use-gesture": "^7.0.15",
+    "reactstrap": "^8.4.1",
     "swiper": "^5.3.8"
   },
   "scripts": {
