--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-mdl": "^2.1.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
+    "react-social-icons": "^4.1.0",
     "react-spring": "^9.0.0-rc.3",
-    "react-use-gesture": "^7.0.15",
-    "react-social-icons": "^4.1.0"
+    "react-use-gesture": "^7.0.15"
   },
   "scripts": {
     "start": "react-scripts start",
